--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   google_sign_in: ^7.2.0
   firebase_app_check: ^0.4.1+3
   firebase_messaging: ^16.0.3
-  google_generative_ai: ^0.4.0
+  google_generative_ai: ^0.4.7
   flutter_dotenv: ^6.0.0
 
   # Notification Packages (Updated notifications to latest for better compatibility)
@@ -64,6 +64,8 @@ dependencies:
   package_info_plus: ^9.0.0
   flutter_staggered_grid_view: ^0.7.0
   flutterwave_standard: ^1.1.0
+  flutter_markdown: ^0.7.7+1
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
